--- a/.github/workflows/fb.Deploying.yml
+++ b/.github/workflows/fb.Deploying.yml
@@ -1,33 +1,66 @@
-# This workflow will do a clean install of node dependencies, cache/restore them, build the source code and run tests across different versions of node
-# For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
 name: fb_deploying CI
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+      -  main 
     paths : 
-      - 'test'
+      - '/Web/gate-keeper'
   
  
 
 jobs:
   build:
-
+    name : Build
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
         node-version: [ 16.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
-    - uses: actions/checkout@master
+    - name: Checkout Repo 
+      uses: actions/checkout@master
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@master
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    - run: npm ci
-    - run: npm run build --if-present
-    - run: npm test
+          cache-dependency-path: 'Web/gate-keeper/package-lock.json'
+    
+    - name: Install dependencies
+      run: npm ci
+      working-directory: './Web/gate-keeper'
+
+    - name :  Run Build 
+      run: npm run build 
+      working-directory: './Web/gate-keeper'
+
+    - name: Archive Production Artifact
+      uses: actions/upload-artifact@master
+      with:
+        name: dist
+        path: './Web/gate-keeper'
+
+  deploy:
+    name: Deploy
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout Repo
+        uses: actions/checkout@master
+      - name: Download Artifact
+        uses: actions/download-artifact@master
+        with:
+          name: dist
+          path: './Web/gate-keeper'
+
+      - name: Deploy to Firebase
+        uses: w9jds/firebase-action@master
+        with:
+          args: deploy --only hosting
+        env:
+          FIREBASE_TOKEN: ${{ secrets.FIREBASE_TOKEN }}
+          PROJECT_PATH: './Web/gate-keeper'
