--- a/.github/workflows/fb.Deploying.yml
+++ b/.github/workflows/fb.Deploying.yml
@@ -5,7 +5,7 @@ on:
     branches: 
       -  main 
     paths : 
-      - '/Web/gate-keeper'
+      - 'Web/gate-keeper/**'
   
  
 
@@ -19,15 +19,15 @@ jobs:
         node-version: [ 16.x]
 
     steps:
-    - name: Checkout Repo 
-      uses: actions/checkout@master
+    
+    - uses: actions/checkout@master
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@master
       with:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
-          cache-dependency-path: 'Web/gate-keeper/package-lock.json'
+        cache-dependency-path: 'Web/gate-keeper/package-lock.json'
     
     - name: Install dependencies
       run: npm ci
