--- a/.github/workflows/fb.Deploying.yml
+++ b/.github/workflows/fb.Deploying.yml
@@ -34,7 +34,7 @@ jobs:
       working-directory: './Web/gate-keeper'
 
     - name :  Run Build 
-      run: npm run build 
+      run: CI='' npm run build 
       working-directory: './Web/gate-keeper'
 
     - name: Archive Production Artifact
