added the logic to fetch the new active event

--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -8,12 +8,16 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^12.8.0",
+    "@react-native-firebase/storage": "^12.8.0",
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
+    "firebase": "8.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
@@ -27,8 +31,7 @@
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.5",
     "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "@react-native-async-storage/async-storage": "~1.15.0"
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
