--- a/Web/gate-keeper/package.json
+++ b/Web/gate-keeper/package.json
@@ -6,10 +6,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "chart.js": "^3.5.1",
     "firebase": "^8.10.0",
     "materialize-css": "^1.0.0-rc.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.4.2",
     "react-router-dom": "^5.2.0",
