--- a/Mobile/package.json
+++ b/Mobile/package.json
@@ -15,18 +15,22 @@
     "@react-navigation/stack": "^6.0.7",
     "expo": "~42.0.1",
     "expo-app-loading": "^1.1.2",
+    "expo-av": "~9.2.3",
     "expo-font": "~9.2.1",
     "expo-status-bar": "~1.0.4",
     "firebase": "8.2.3",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react-dom": "^16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-audio-recorder-player": "^3.2.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-ionicons": "^4.6.5",
+    "react-native-paper": "^4.9.2",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12",
+    "react-native-vector-icons": "^8.1.0",
+    "react-native-web": "^0.13.18",
     "react-navigation": "^4.4.4",
     "react-navigation-stack": "^2.10.4",
     "react-redux": "^7.2.5",
