--- a/Mobile/app.json
+++ b/Mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "TestExpoProject",
+    "name": "Gate Keeper",
     "slug": "TestExpoProject",
     "version": "1.0.0",
     "orientation": "portrait",
@@ -13,15 +13,13 @@
     "updates": {
       "fallbackToCacheTimeout": 0
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
+        "foregroundImage": "./assets/icon.png",
         "backgroundColor": "#FFFFFF"
       },
       "package": "getekeeper.apk"
